[package]
name = "oi-pkg-visualizer"
version = "1.1.0"
edition = "2021"
authors = ["Maroš Telka <maros@telka.sk>"]
description = "Implementation of OpenIndiana package visualizer website and server"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aueam/oi-pkg-visualizer"
keywords = ["pkg", "oi", "visualizer"]

[dependencies]
oi-pkg-checker-core = { version = "2.0.1", features = ["thread_safe"] }
fmri = "1.0.3"
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors"] }
